# nagatoRender

./: .gitmodules  CMakeLists.txt  main.cpp  nagatorender.xml
src/bxdf/: bxdf.hpp  lambert.cpp  lambert.hpp
src/camera/: camera.cpp  camera.hpp  pinhole_camera.cpp  pinhole_camera.hpp
src/color/: color_base.hpp  rgb.cpp  rgb.hpp
src/core/: film.cpp  film.hpp  hit_info.cpp  hit_info.hpp  nagato.cpp  nagato.hpp  ray.cpp  ray.hpp  sample.hpp  scene.cpp  scene.hpp  vdb.hpp
src/gui/: gl_widget.cpp  gl_widget.hpp  main_window.cpp  main_window.hpp
src/images/: image.cpp  image.hpp
src/integrator/: integrator.cpp  integrator.hpp
src/light/: light.cpp  light.hpp
src/material/: material.cpp  material.hpp
src/object/: object.cpp  object.hpp  sphere.cpp  sphere.hpp
src/render/: render_base.cpp  render_base.hpp
src/struct/: intersector.cpp  intersector.hpp  linear_intersector.cpp  linear_intersector.hpp
src/test/: bxdf_test.cpp  test.cpp  test_util.hpp
ui/: mainwindow.ui
